fixed overflow in code blocks, working on helloworld post

--- a/astro-website/src/styles/style.css
+++ b/astro-website/src/styles/style.css
@@ -575,6 +575,10 @@ img.dark{
     display: none;
 }
 
+article pre[class*="language-"] {
+  overflow-x: auto;
+}
+
 
 article h2 {
   font-size: 2rem;
